--- a/App/package.json
+++ b/App/package.json
@@ -20,6 +20,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
+    "react-native-search-filter": "^0.1.5",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
