--- a/App/package.json
+++ b/App/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "App",
+  "name": "covid19monitor",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,27 +10,27 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.7",
-    "@react-navigation/native": "^5.1.0",
-    "@react-navigation/stack": "^5.2.1",
-    "react": "16.9.0",
-    "react-native": "0.61.5",
-    "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.6.0",
-    "react-native-reanimated": "^1.7.0",
-    "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.3.0",
-    "react-native-vector-icons": "^6.6.0"
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "5.9.3",
+    "@react-navigation/stack": "5.14.3",
+    "react": "17.0.1",
+    "react-native": "0.63.4",
+    "react-native-elements": "3.2.0",
+    "react-native-gesture-handler": "1.10.3",
+    "react-native-reanimated": "1.13.2",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "2.18.1",
+    "react-native-vector-icons": "8.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.5.1",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.0",
-    "react-test-renderer": "16.9.0"
+    "@babel/core": "7.13.8",
+    "@babel/runtime": "7.13.9",
+    "@react-native-community/eslint-config": "2.0.0",
+    "babel-jest": "26.6.3",
+    "eslint": "7.21.0",
+    "jest": "26.6.3",
+    "metro-react-native-babel-preset": "0.65.2",
+    "react-test-renderer": "17.0.1"
   },
   "jest": {
     "preset": "react-native"
